added new files and changes as per content

--- a/boilerplate/aboutUs.html
+++ b/boilerplate/aboutUs.html
@@ -28,7 +28,7 @@
 			<div class="container">
 				<h1 class="page-title pull-left">About Us</h1>
 				<ol class="breadcrumb">
-					<li><a href="/Users/savroop%20singh/attainx/boilerplate/index.html">Home</a></li>
+					<li><a href="http://localhost/attainx/boilerplate/index.html">Home</a></li>
 					<li class="active">About Us</li>
 				</ol>
 			</div>
@@ -57,14 +57,14 @@
 					</div>
 					<br>
 					<hr>
-					<h2 class="section-heading">OUR GOAL</h2>
+					<h2 class="section-heading ourGoal">OUR GOAL</h2>
 					<p class="lead"><span class="dropcap dropcap-big">O</span>ur passion is to be an example of excellence.  We exceed in our commitment to our clients in terms of Technology, People and Services   Our passion is to build a partnership with our Client to deliver the state of art Technology and help cut development, operational and maintenance costs.   This goal enables us to be a provide world class service.</p>
 					<br>
-					<h2 class="section-heading">OUR TEAM</h2>
+					<h2 class="section-heading ourTeam">OUR TEAM</h2>
 					<p class="lead"><span class="dropcap dropcap-big">W</span>e have an very highly skilled and experienced   team, our passion is to work with our client in their mission and deliver the best of skills that  leads our client to flawless delivery and  success.
 Our commitment to quality and delivery:  Our  team has the passion and determination to  deliver quality and exceptional outcomes that help our client maintain quality standards and achieve, CMMI level standards.</p>
                     <br>
-                    <h2 class="section-heading">FLEXIBILITY</h2>
+                    <h2 class="section-heading flexibility">FLEXIBILITY</h2>
 					<p class="lead"><span class="dropcap dropcap-big">O</span>ur clients needs are unique and different, we as a team have the ability to deal with new challenges and match our subject matter resources with the clients business needs.</p>
 					<br>
 					<h2 class="section-heading">ADVISORY BOARD</h2>
