--- a/boilerplate/advisoryBoard.html
+++ b/boilerplate/advisoryBoard.html
@@ -28,7 +28,7 @@
 			<div class="container">
 					<h1 class="page-title pull-left">Our Advisor</h1>
 				<ol class="breadcrumb">
-					<li><a href="/Users/savroop%20singh/attainx/boilerplate/index.html">Home</a></li>
+					<li><a href="http://localhost/attainx/boilerplate/index.html">Home</a></li>
 					<li class="active">Advisor</li>
 				</ol>
 			</div>
