--- a/boilerplate/agileSoftwareDevelopment.html
+++ b/boilerplate/agileSoftwareDevelopment.html
@@ -28,7 +28,7 @@
 			<div class="container">
 				<h1 class="page-title pull-left">Services - Agile Software Development</h1>
 				<ol class="breadcrumb">
-					<li><a href="/Users/savroop%20singh/attainx/boilerplate/index.html">Home</a></li>
+					<li><a href="http://localhost/attainx/boilerplate/index.html">Home</a></li>
 					<li class="active">Services - Agile Software Development</li>
 				</ol>
 			</div>
@@ -42,8 +42,8 @@
 					    <div class="featured-image">
 					        <a href="#"><img src="img/adobe-stock/agile-main-145438301.jpg" class="img-responsive" alt="featured-image" /></a>
 					    </div>
-						<p>Our Agile teamsproduce virtually flawless code quickly and cost-effectivelyby blending Extreme Programming (XP), Scrum, and Lean practices, and also provide greater ability to deliver a solution which matches what the client needs in a shorter amount of time
-						Agile methodologies have shown improved customer satisfaction as it delivers higher quality products in less time.</p><p>
+						<p>Our Agile teamsproduce virtually flawless code quickly and cost-effectivelyby blending Extreme Programming (XP), Scrum, and Lean practices, and also provide greater ability to deliver a solution which matches what the client needs in a shorter amount of time Agile methodologies have shown improved customer satisfaction as it delivers higher quality products in less time.</p>
+                        <p>
 						Agile helps to overcome the problems occurred in waterfall methodologies.
 						Agile offers more flexibility, adaptability, cost effectiveness and ensures that requirements are molded around the customers’ needs and that changes are identified early and incorporated when they are least expensive.
 						</p>
