--- a/boilerplate/bigData.html
+++ b/boilerplate/bigData.html
@@ -26,9 +26,9 @@
                   <!-- HERO UNIT -->
 		<div class="page-header">
 			<div class="container">
-				<h1 class="page-title pull-left">Services - Big Data</h1>
+				<h1 class="page-title pull-left">Big Data</h1>
 				<ol class="breadcrumb">
-					<li><a href="/Users/savroop%20singh/attainx/boilerplate/index.html">Home</a></li>
+					<li><a href="http://localhost/attainx/boilerplate/index.html">Home</a></li>
 					<li class="active">Big Data</li>
 				</ol>
 			</div>
@@ -47,8 +47,53 @@
 						While volume indicates more data, it is the granular nature of the data that is unique. Big data requires processing high volumes of low-density, data of unknown value, such as Twitter data feeds, sensor-enabled equipment capturing data at the speed of light, and many more.</P><P>
 						We provide easy connect to your data with just a few clicks and easily create powerful dashboards and Easily scale from a single server to multiple datacenters.Main challenges are capture, sharing, analytics, storage, search, , visualizing and requires massively parallel software running on, hundreds or even thousands of servers.
 						</p>
+                        <p>Attainx has a Big Data Analytics product that is built on   open source.</p>
+                        <ul>
+                        <li>Real Time search capability of Documents in Big Data.</li>
+                    <li>Secure Content Management of Document in Big Data</li>
+                    <li>Role Based security for accessing documents.</li>
+                    <li>Data at rest and transport is secure – SSL</li>
+                    <li>Platform independent – AWS, ASSURE, Terramark, Sales Force, Rackspace</li>
+                    <li>Cost effective pay as you go, no stand up cost.</li>
+                        </ul>
+                    <p>USER ACCESS</p>
+                    <ul>
+                    <li>Data Capture screen - ability to load one or more documents.</li>
+                    <li>Less than 1 sec User response </li>
+                    <li>Multi-Device</li>
+                    <li>Access control levels</li>
+                    <li>Enterprise Department  Owner</li>
+                    </ul>
+
+                    <p>WORK FLOW</p>
+                    <ul>
+                    <li>Approval flows across  Stakeholders and Business Lines</li>
+                    <li>Process Monitoring & dynamic task management</li>
+                    <li>Event driven inbox</li>
+                    </ul>
+                    <p>MULTI TENANCY</p>
+                    <ul>
+                    <li>Scalable Architecture </li>
+                    <li>Ability to add any number of Clients </li>
+                    <li>Low Cost SAAS Model & Low redundancy on Failover</li>
+                    </ul>
+
+                    <p>DATA</p>
+                    <ul>
+                    <li>Structured and Unstructured</li>
+                    <li>Heterogeneous BigData</li>
+                    <li>Historical and Trend Analytics</li>
+                    <li>Semantic Searches </li>
+                    <li>Replication</li>
+                    <li>No Investment</li>
+                    <li>Pay as you go</li>
+                    <li>Secure</li>
+                    <li>Quick access</li>
+                    <li>Open Source</li>
+                    </ul>
+
 					</div>
-					<div class="col-md-3">
+					<div class="col-md-3" id="rightColumn">
 						<!-- RIGHT SIDEBAR CONTENT -->
 						
 						<!-- END RIGHT SIDEBAR CONTENT -->
