--- a/boilerplate/careers.html
+++ b/boilerplate/careers.html
@@ -26,59 +26,25 @@
                   <!-- HERO UNIT -->
 		<div class="page-header">
 			<div class="container">
-				<h1 class="page-title pull-left">Data Center Consolidation</h1>
+				<h1 class="page-title pull-left">Careers</h1>
 				<ol class="breadcrumb">
 					<li><a href="http://localhost/attainx/boilerplate/index.html">Home</a></li>
-					<li class="active">Data Center Consolidation</li>
+					<li class="active">Careers</li>
 				</ol>
 			</div>
 		</div>
 		<!-- END BREADCRUMBS -->
-		<!-- PAGE CONTENT -->
 		<div class="page-content">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-9">
-					    <div class="featured-image">
-					        <a href="#"><img src="img/adobe-stock/big-data-main-87909563.jpg" class="img-responsive" alt="featured-image" /></a>
-					    </div>
-						<p>AttainX has Data center consolidation is the process of reducing the volume of physical IT assets through highly efficient and scalable technologies. Organizations leverage data center consolidation to reduce operating costs.</p>
-						<p>Today's competitive business environment, with increased focus on enterprise IT, most CIOs are done with optimizing the platform and applications layers in their IT setup. Now, more and more enterprise CIOs are exploring avenues to optimize their IT Infrastructure investments and setup, given the incremental costs of underperforming / heterogeneous data center assets.
-						</p>
-					</div>
-					<div class="col-md-3" id="rightColumn">
-						<!-- RIGHT SIDEBAR CONTENT -->
-						
-						<!-- END RIGHT SIDEBAR CONTENT -->
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- LATEST CERTIFICAITON -->
-		<section id="certifications">
-			
-		</section>
-		<!-- END LATEST CERTIFICAITON -->
+            <div class="container">
+                <div class="row">
+                   <p>
+                     Please send your resume to hr@attainx.com
+                   </p>      
+               </div>
+            </div>
+        </div>
 		<div id="footer"></div>
- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCE4gqZHCYv24tj1_YLv4eNd6C_omyecZQ&callback=initMap" type="text/javascript"></script>
- <script>
- 	function initMap() {
-    var latLng = new google.maps.LatLng(37.415116,-79.144288),
-        myOptions = {
-            zoom: 8,
-            center: latLng,
-            mapTypeId: google.maps.MapTypeId.ROADMAP
-        },
-        map = new google.maps.Map(document.getElementById('map-canvas'), myOptions),
-        markerA = new google.maps.Marker({
-            position: latLng,
-            title: "Attainx Office",
-            map: map
-        });
-}
-
-initMap();
- </script>
+ 
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
         <script src="js/vendor/bootstrap.min.js"></script>
         <script src="js/vendor/slick.min.js"></script>
