--- a/boilerplate/cloud.html
+++ b/boilerplate/cloud.html
@@ -29,7 +29,7 @@
 				<h1 class="page-title pull-left">Services - Cloud – Application transition to Cloud
 </h1>
 				<ol class="breadcrumb">
-					<li><a href="/Users/savroop%20singh/attainx/boilerplate/index.html">Home</a></li>
+					<li><a href="http://localhost/attainx/boilerplate/index.html">Home</a></li>
 					<li class="active">Services - Cloud – Application transition to Cloud
 </li>
 				</ol>
@@ -71,6 +71,26 @@
 						<li>Infrastructure Optimization.</li>
 						<li>Cloud Ready – Pay by Drink Provisioning, SOA, Catalog of Services on Demand.</li>
 						</ul>
+
+						<p>Attainx has extensive experience in Cloud offerings, we have partnered with number of leading cloud providers to provide our clients with Cloud services.</p>
+						<p>We work with various IaaS, PaaS, and SaaS providers to achieve the success of our clients missions and goals.</p>
+						<p>The steps we followed for Cloud Migration Services are as follows:</p>
+						<ul>
+							<li>Layout the Cloud Migration Process</li>
+							<li>Decide and prioritize applications to be migrated.</li>
+							<li>Analyze applications to be migrated.</li>
+							<li>Finalize migration roadmap</li>
+							<li>Retire applications that are not being migrated.</li>
+							<li>Hosting preparation.</li>
+							<li>Platform preparation.</li>
+							<li>Application rewrite / automation tools.</li>
+							<li>Application development</li>
+							<li>Integration</li>
+							<li>Quality Assurance and Quality Control</li>
+							<li>Transition to Cloud</li>
+							<li>Production cutover.</li>
+						</ul>
+
 					
 						<h3>Attainx Cloud Partners / Team</h3>
 						<ul>
