--- a/boilerplate/enterpriseServiceDesk.html
+++ b/boilerplate/enterpriseServiceDesk.html
@@ -28,7 +28,7 @@
 			<div class="container">
 				<h1 class="page-title pull-left">Enterprise Service Desk</h1>
 				<ol class="breadcrumb">
-					<li><a href="/Users/savroop%20singh/attainx/boilerplate/index.html">Home</a></li>
+					<li><a href="http://localhost/attainx/boilerplate/index.html">Home</a></li>
 					<li class="active">Enterprise Service Desk</li>
 				</ol>
 			</div>
@@ -44,8 +44,8 @@
 					    </div>
 						<p>AttainX provides flexible, responsive, and high-performing managed Enterprise Service Desk. We expand the scope of service desk management from a traditional reactive function providing incident management and support services, to a new, we provides end user support through forecasted updates.</p>
 						<p>Our enterprise serve desk support all aspects of IT requirements across your infrastructure and applications. We focus on doing the job of providing high-value support by our ability to rapidly solve issues at first contact and expertise in solving more complex concerns by uncovering the root causes and eliminating future problems.</p>
-						<p>Rapid digitization of end user workplace environment is paving the way for Enterprise Service Desk transformation. Fast-changing demands from today's 24/7 connected users with multiple devices, make it challenging for enterprise IT to remain responsive, quick, and personalized.
-						Our Enterprise Service Desk is the single point of contact for all end users across your enterprise. We ensure they have access to all Information Services needed to restore their service quickly. Our service desk reduces support costs and increases your productivity and satisfaction.
+						<p>Rapid digitization of end user workplace environment is paving the way for Enterprise Service Desk transformation. Fast-changing demands from today's 24/7 connected users with multiple devices, make it challenging for enterprise IT to remain responsive, quick, and personalized.</p>
+						<p>Our Enterprise Service Desk is the single point of contact for all end users across your enterprise. We ensure they have access to all Information Services needed to restore their service quickly. Our service desk reduces support costs and increases your productivity and satisfaction.
 						</p>
 					</div>
 					<div class="col-md-3" id="rightColumn">
