--- a/boilerplate/programAndProjectManagement.html
+++ b/boilerplate/programAndProjectManagement.html
@@ -28,7 +28,7 @@
 			<div class="container">
 				<h1 class="page-title pull-left">Program and Project Management</h1>
 				<ol class="breadcrumb">
-					<li><a href="/Users/savroop%20singh/attainx/boilerplate/index.html">Home</a></li>
+					<li><a href="http://localhost/attainx/boilerplate/index.html">Home</a></li>
 					<li class="active">Program and Project Management</li>
 				</ol>
 			</div>
@@ -42,11 +42,11 @@
 					    <div class="featured-image">
 					        <a href="#"><img src="img/adobe-stock/management-main-101665287.jpg" class="img-responsive" alt="featured-image" /></a>
 					    </div>
-						<p>We help our clients achieve success in their most complex, highly visible programs with customized, scalable solutions aligned to their missions and strategies by offering a well-established program and project management methodology that ensures successful solution delivery across the various project performance factors-human, process, and technology.</p>
-						<p>We bring experience, proven methodologies, and talented, committed professionals to bear on the most challenging situations. The methodology facilitates alignment of project objectives with customer requirements, risk mitigation, and quality assurance, and ensures that projects are delivered on-time and within budget. Competing successfully in a high-velocity, software-driven world places increasing demands on an organization’s ability to execute and deliver projects at a rapid pace.
-						</p>
-						<p>Enterprises are looking to enhance speed, agility while minimizing risks by obtaining better control of data center assets. AttainX accomplishes this with a consolidation system that leverages the latest cloud and virtualization technology.
-						</p>
+						<p>“ Our client’s success in their mission, reduce cost, and run their projects efficiently is our goal”</p>
+						<p>Our methodology to manage projects starts with our clients involvement, and collaborate with stakeholders  to   achieve the  success  they need in this  most complex, highly dynamic and challenging technologies.  Our mission is to reduce cost, over the life cycle of the project, align our goals to our clients mission, strategies and roadmap.     Our key success component in  project management is our communication between IT, Business and the project teams, out IT dashboard provide our clients transparency of cost, resource utilization and up to date current status.  We ensure successful  delivery across various project performance factors-human, process, and technology.</p>
+						<p>We bring experience, with proven PMI, ISO, ITIL and CMMI methodologies, our resources are  talented, committed professionals to ensure our clients success in  challenging situations. The methodology facilitates alignment of project objectives with customer requirements, risk mitigation, and quality assurance, and ensures that projects are delivered on-time and within budget. Competing successfully in a high-velocity, software-driven world places increasing demands on an organization’s ability to execute and deliver projects at a rapid pace.</p>
+						<p>Enterprises are looking to enhance speed, agility while minimizing risks by obtaining better control of data center assets. AttainX accomplishes this with a consolidation system that leverages the latest cloud and virtualization technology.</p>
+
 					</div>
 					<div class="col-md-3" id="rightColumn">
 						<!-- RIGHT SIDEBAR CONTENT -->
