--- a/boilerplate/securitySolutions.html
+++ b/boilerplate/securitySolutions.html
@@ -28,7 +28,7 @@
 			<div class="container">
 				<h1 class="page-title pull-left">Security Solutions</h1>
 				<ol class="breadcrumb">
-					<li><a href="/Users/savroop%20singh/attainx/boilerplate/index.html">Home</a></li>
+					<li><a href="http://localhost/attainx/boilerplate/index.html">Home</a></li>
 					<li class="active">Security Solutions</li>
 				</ol>
 			</div>
@@ -47,7 +47,7 @@
 						<h3>Data Protection</h3>
 						<p>Protect your applications and infrastructure with static and dynamic masking, added scrutiny through data leak prevention and robust encryption solutions.</p>
 						<h3>Application Security Assessment</h3>
-						<p>nformation technology and high-speed Internet are great enablers of small business success, but with the benefits comes the need to guard against growing cyber threats. As larger companies take steps to secure their systems, less secure small businesses are easier targets for cyber criminals. Minimize the threat of a security breach with our services—from code reviews and assessments through integrated governance, risk and compliance solutions.</p>
+						<p>Information technology and high-speed Internet are great enablers of small business success, but with the benefits comes the need to guard against growing cyber threats. As larger companies take steps to secure their systems, less secure small businesses are easier targets for cyber criminals. Minimize the threat of a security breach with our services—from code reviews and assessments through integrated governance, risk and compliance solutions.</p>
 						<h3>Threat Management</h3>
 						<p>AttainX’s rely on our managed security solutions for comprehensive event monitoring across networks, supported by AttainX’s threat intelligence services. We adopt a regulatory change management program are able to realize a range of benefits, including reduced risk.
 						</p>
