--- a/boilerplate/testing.html
+++ b/boilerplate/testing.html
@@ -28,7 +28,7 @@
 			<div class="container">
 				<h1 class="page-title pull-left">Services - Testing and IV&V</h1>
 				<ol class="breadcrumb">
-					<li><a href="/Users/savroop%20singh/attainx/boilerplate/index.html">Home</a></li>
+					<li><a href="http://localhost/attainx/boilerplate/index.html">Home</a></li>
 					<li class="active">Services - Testing and IV&V</li>
 				</ol>
 			</div>
