--- a/boilerplate/certifications.html
+++ b/boilerplate/certifications.html
@@ -28,7 +28,7 @@
 			<div class="container">
 				<h1 class="page-title pull-left">Certifications</h1>
 				<ol class="breadcrumb">
-					<li><a href="/Users/savroop%20singh/attainx/boilerplate/index.html">Home</a></li>
+					<li><a href="http://localhost/attainx/boilerplate/index.html">Home</a></li>
 					<li class="active">Certifications</li>
 				</ol>
 			</div>
@@ -57,7 +57,31 @@
 			</div>
 		</div>
 		<!-- LATEST CERTIFICAITON -->
-		<section id="certifications">
+		<section>
+           <div class="container">
+                <h2 class="section-heading certifications-heading">CERTIFICATIONS</h2>
+                <div>
+            <div>
+             <a href="#"><img src="img/contract-vehicle.jpg" class="img-responsive" alt=""></a>
+           </div>
+                      <div>
+                            <a href="#"><img src="img/sba-logo.png" class="img-responsive" alt=""></a>
+                        </div>
+                        <div>
+                            <a href="#"><img src="img/edwsob-logo.jpg" class="img-responsive" alt=""></a>
+                        </div>
+                        <div>
+                            <a href="#"><img src="img/wosb.jpg" class="img-responsive" alt=""></a>
+                        </div>
+                        <div>
+                            <a href="#"><img src="img/sdb-logo.jpg" class="img-responsive" alt=""></a>
+                        </div>
+                        <div>
+                            <a href="#"><img src="img/swam-logo.jpg" class="img-responsive" alt=""></a>
+                        </div>
+
+                </div>
+            </div>
 		</section>
 		<!-- END LATEST CERTIFICAITON -->
 		<div id="footer"></div>
