--- a/boilerplate/cyberSecurity.html
+++ b/boilerplate/cyberSecurity.html
@@ -22,14 +22,14 @@
       <!--[if lt IE 8]>
           <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
       <![endif]-->
-       <div id="navBar"></div>
+      <div id="navBar"></div>
                   <!-- HERO UNIT -->
 		<div class="page-header">
 			<div class="container">
-				<h1 class="page-title pull-left">Geospatial Solutions</h1>
+				<h1 class="page-title pull-left">Cyber Security</h1>
 				<ol class="breadcrumb">
 					<li><a href="http://localhost/attainx/boilerplate/index.html">Home</a></li>
-					<li class="active">Geospatial Solutions</li>
+					<li class="active">Cyber Security</li>
 				</ol>
 			</div>
 		</div>
@@ -40,11 +40,11 @@
 				<div class="row">
 					<div class="col-md-9">
 					    <div class="featured-image">
-					        <a href="#"><img src="img/adobe-stock/geo-main-144507142.jpg" class="img-responsive" alt="featured-image" /></a>
+					        <a href="#"><img src="img/adobe-stock/recruitment-main-82905173.jpg" class="img-responsive" alt="featured-image" /></a>
 					    </div>
-						<p>By integrating sensors, field applications, real-time communications, field and back-office processing, modeling, and analytics, offers comprehensive geospatial solutions. From needs analysis to implementation to maintenance, our staff stands ready to support your organization in enhancing the functionality and quality of your geographic information systems and geospatial data.</p>
-						<p>AttainX Geospatial solutions facilitate a high quality, productive workflow and data exchange to drive efficiency, productivity, safety and value in organizations of all sizes. The result is accurate data that can be transformed into the intelligence you – and your clients – require to make informed decisions.
-						</p>
+						<p>AttanX  has a very comprehensive Cyber Security practice,  our process entails a methodology which starts with Identifying threats, reviewing the security measures, and build a very robust iron dome security strategy.</p>
+                        <p>Our consultant have vast experience and our mail goal is to engage with our customers, understand the current state and propose applying controls to the device or node.</p>
+
 					</div>
 					<div class="col-md-3" id="rightColumn">
 						<!-- RIGHT SIDEBAR CONTENT -->
