--- a/boilerplate/devops.html
+++ b/boilerplate/devops.html
@@ -22,14 +22,14 @@
       <!--[if lt IE 8]>
           <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
       <![endif]-->
-       <div id="navBar"></div>
+      <div id="navBar"></div>
                   <!-- HERO UNIT -->
 		<div class="page-header">
 			<div class="container">
-				<h1 class="page-title pull-left">Geospatial Solutions</h1>
+				<h1 class="page-title pull-left">Devops</h1>
 				<ol class="breadcrumb">
 					<li><a href="http://localhost/attainx/boilerplate/index.html">Home</a></li>
-					<li class="active">Geospatial Solutions</li>
+					<li class="active">Devops</li>
 				</ol>
 			</div>
 		</div>
@@ -40,11 +40,14 @@
 				<div class="row">
 					<div class="col-md-9">
 					    <div class="featured-image">
-					        <a href="#"><img src="img/adobe-stock/geo-main-144507142.jpg" class="img-responsive" alt="featured-image" /></a>
+					        <a href="#"><img src="img/adobe-stock/recruitment-main-82905173.jpg" class="img-responsive" alt="featured-image" /></a>
 					    </div>
-						<p>By integrating sensors, field applications, real-time communications, field and back-office processing, modeling, and analytics, offers comprehensive geospatial solutions. From needs analysis to implementation to maintenance, our staff stands ready to support your organization in enhancing the functionality and quality of your geographic information systems and geospatial data.</p>
-						<p>AttainX Geospatial solutions facilitate a high quality, productive workflow and data exchange to drive efficiency, productivity, safety and value in organizations of all sizes. The result is accurate data that can be transformed into the intelligence you – and your clients – require to make informed decisions.
-						</p>
+						<p>Our main focus is to help our clients transition their business operations to Digital Transformation thru DEVOPS. Our IT dashboard help in enabling our clients Strategic and operational goals. Our shared service model helps DEVOPS culture of collaboration across teams, across various business units and help implement Devops to  benefit the organization.</p>
+                        <p>Our process to implement devops:</p>
+                        <p>CAPTURE: Idea / bug / enhancement / requirements.</p>
+                        <p>DEPLOY: Automated deployment of code to various environments and finally to production.</p> 
+                        <p>FEED LOOP:  Our client’s feedback after deployment is quickly integrated into our delivery process,  reduce rework and improve the product or solution.</p>
+                        <p>DASHBOARD:  Real time analysis of budget/cost, resource utilization, milestones and risks.  This uses our custom Big Data analytics tools using open source technology.</p>
 					</div>
 					<div class="col-md-3" id="rightColumn">
 						<!-- RIGHT SIDEBAR CONTENT -->
