--- a/boilerplate/enterpriseArchitecture.html
+++ b/boilerplate/enterpriseArchitecture.html
@@ -22,14 +22,14 @@
       <!--[if lt IE 8]>
           <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
       <![endif]-->
-       <div id="navBar"></div>
+      <div id="navBar"></div>
                   <!-- HERO UNIT -->
 		<div class="page-header">
 			<div class="container">
-				<h1 class="page-title pull-left">Geospatial Solutions</h1>
+				<h1 class="page-title pull-left">Enterprise Architecture</h1>
 				<ol class="breadcrumb">
 					<li><a href="http://localhost/attainx/boilerplate/index.html">Home</a></li>
-					<li class="active">Geospatial Solutions</li>
+					<li class="active">Enterprise Architecture</li>
 				</ol>
 			</div>
 		</div>
@@ -40,11 +40,19 @@
 				<div class="row">
 					<div class="col-md-9">
 					    <div class="featured-image">
-					        <a href="#"><img src="img/adobe-stock/geo-main-144507142.jpg" class="img-responsive" alt="featured-image" /></a>
+					        <a href="#"><img src="img/adobe-stock/recruitment-main-82905173.jpg" class="img-responsive" alt="featured-image" /></a>
 					    </div>
-						<p>By integrating sensors, field applications, real-time communications, field and back-office processing, modeling, and analytics, offers comprehensive geospatial solutions. From needs analysis to implementation to maintenance, our staff stands ready to support your organization in enhancing the functionality and quality of your geographic information systems and geospatial data.</p>
-						<p>AttainX Geospatial solutions facilitate a high quality, productive workflow and data exchange to drive efficiency, productivity, safety and value in organizations of all sizes. The result is accurate data that can be transformed into the intelligence you – and your clients – require to make informed decisions.
-						</p>
+						<p>Our robust process captures the business logic and integrates the IT capabilities that enables any organization to produce a standard and integrated operating model.</p>
+                        <p>Out IT dashboard helps our clients benefit from the EA methodology to reduce costs, invest wisely and increase shared services and implement strategic initiatives.</p>
+                        <p>Our EA team are experienced in implementing DoDAF, MODAF, TOGAF and ZACHMAN architecture frameworks.</p>  
+                        <p>Our main focus to implement an Enterprise Architecture solution is to ensure </p>
+                        <ul>
+                            <li>REDUCTION IN COST</li>
+                            <li>TECHNOLOGY STANDARDIZATION</li>
+                            <li>REFINE AND IMPOROCESS BUSINESS PROCESSES</li>
+                            <li>ACCOMPLISH SHARED SERVICE AND STRATEGIC ROADMAP.</li>
+                        </ul>      
+
 					</div>
 					<div class="col-md-3" id="rightColumn">
 						<!-- RIGHT SIDEBAR CONTENT -->
