added logos and certification and contract pages

--- a/boilerplate/contractVehicles.html
+++ b/boilerplate/contractVehicles.html
@@ -60,24 +60,22 @@
 		<section>
            <div class="container">
                 <h2 class="section-heading certifications-heading">CONTRACT VEHICLES</h2>
-                <div>
-            <div>
-             <a href="#"><img src="img/contract-vehicle.jpg" class="img-responsive" alt=""></a>
-           </div>
+                <div class="contractVehicles">
                       <div>
-                            <a href="#"><img src="img/sba-logo.png" class="img-responsive" alt=""></a>
+                         <a href="#"><img src="img/contract-vehicle.jpg" class="img-responsive" alt=""></a>
+                       </div>
+                      
+                       <div>
+                            <a href="#"><img src="img/gsaoasis.jpg" class="img-responsive" alt=""></a>
                         </div>
                         <div>
-                            <a href="#"><img src="img/edwsob-logo.jpg" class="img-responsive" alt=""></a>
+                            <a href="#"><img src="img/gsastar.jpg" class="img-responsive" alt=""></a>
                         </div>
                         <div>
-                            <a href="#"><img src="img/wosb.jpg" class="img-responsive" alt=""></a>
+                            <a href="#"><img src="img/gsaAlliant.png" class="img-responsive" alt=""></a>
                         </div>
-                        <div>
-                            <a href="#"><img src="img/sdb-logo.jpg" class="img-responsive" alt=""></a>
-                        </div>
-                        <div>
-                            <a href="#"><img src="img/swam-logo.jpg" class="img-responsive" alt=""></a>
+                         <div>
+                            <a href="#"><img src="img/seaport.png" class="img-responsive" alt=""></a>
                         </div>
 
                 </div>
