changes to cloud page

--- a/boilerplate/cloud.html
+++ b/boilerplate/cloud.html
@@ -26,12 +26,10 @@
                   <!-- HERO UNIT -->
 		<div class="page-header">
 			<div class="container">
-				<h1 class="page-title pull-left">Services - Cloud – Application transition to Cloud
-</h1>
+				<h1 class="page-title pull-left">Cloud - Applications and Migration</h1>
 				<ol class="breadcrumb">
 					<li><a href="http://localhost/attainx/boilerplate/index.html">Home</a></li>
-					<li class="active">Services - Cloud – Application transition to Cloud
-</li>
+					<li class="active">Cloud - Applications and Migration</li>
 				</ol>
 			</div>
 		</div>
